use for giscus setup

--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-D5zIbBFc.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-5iqnZ262.js"></script>
   </head>
 
   <body>
